--- a/craftmanship/functions/index.html
+++ b/craftmanship/functions/index.html
@@ -249,7 +249,7 @@ function remove() {
                 <section>
                     <h3>Flag arguments</h3>
                     <p class="fragment">
-                        Makes a function do multiple things!
+                        Make functions do multiple things!
                     </p>
 
                     <pre class="fragment"><code contenteditable class="PHP">
