Add links to dev workshop slides

--- a/smwcon/2013fall/dev/index.html
+++ b/smwcon/2013fall/dev/index.html
@@ -41,8 +41,8 @@
                     <h2></h2>
                     <p>
                         Tutorial by <a href="https://twitter.com/JeroenDeDauw">@JeroenDeDauw</a><br /><br />
-                        bit.ly/<br /><br />
-                        <a href="">SMWCon Fall 2013, Berlin</a>
+                        bit.ly/smw-2013-dev<br /><br />
+                        <a href="https://semantic-mediawiki.org/wiki/SMWCon_Fall_2013/Hands-on_session._Programming_SMW">SMWCon Fall 2013, Berlin</a>
                     </p>
                 </section>
 
@@ -54,7 +54,7 @@
 
             <section data-state="blackout" data-transition="linear">
                 <h3>Special:Links</h3>
-                <p><a href="http://bit.ly/">View slides at bit.ly/</a></p>
+                <p><a href="http://bit.ly/smw-2013-dev">View slides at bit.ly/smw-2013-dev</a></p>
                 <p><a href="https://github.com/JeroenDeDauw/slides/">Slides on GitHub (source)</a></p>
                 <p><a href="https://semantic-mediawiki.org">semantic-mediawiki.org</a></p>
                 <p><a href="https://twitter.com/#!/SemanticMW">@SemanticMW on Twitter</a></p>
