--- a/smwcon/2013fall/yearly/index.html
+++ b/smwcon/2013fall/yearly/index.html
@@ -56,8 +56,9 @@
             <section>
                 <h3>About me</h3>
                 <ul>
+                    <li>Jeroen De Dauw</li>
                     <li>(S)MW dev since 2009</li>
-                    <li class="fragment">Working for WMDE on Wikidata</li>
+                    <li class="fragment">Architect Wikidata at WMDE</li>
                     <li class="fragment">Domain layer guy</li>
                     <li class="fragment">Software craftsmanship</li>
                     <li class="fragment">Passion for interoperability and reuse</li>
