Improvements to smw yearly

--- a/smwcon/2013fall/yearly/index.html
+++ b/smwcon/2013fall/yearly/index.html
@@ -317,10 +317,9 @@
                 <h3>Caching improvements</h3>
                 <p>
                     Caching support for Special:Properties, Special:WantedProperties,
-                    and Special:UnusedProperties.
-
-                    Concept cache display in each individual concept if available
+                    and Special:UnusedProperties
                 </p>
+                <p class="fragment">Concept cache display in each individual concept if available</p>
             </section>
 
             <section data-transition="linear">
