Improve functions slides

--- a/craftmanship/functions/index.html
+++ b/craftmanship/functions/index.html
@@ -348,6 +348,19 @@ if ( set( "username", "NyanCat" ) )
                     <img src="img/cat.gif" />
                 </section>
 
+                <section data-state="blackout" data-transition="linear">
+                    <h3>Instead of me</h3>
+
+                    <img height="290px" src="img/clean-code.jpg" />
+                    <img height="290px" src="img/clean-coder.jpg" />
+                    <img height="290px" src="img/fowler-enterprise.jpg" />
+                    <img height="290px" src="img/legacy-code.jpg" />
+                </section>
+
+                <section data-state="blackout" data-transition="linear">
+                    <img src="img/i-has-question-lolcat.jpg" />
+                </section>
+
                 <section data-state="blackout">
                     <h3>Attribution</h3>
                     <ul>
