Improve functions slides

--- a/craftmanship/functions/index.html
+++ b/craftmanship/functions/index.html
@@ -327,7 +327,7 @@ if ( set( "username", "NyanCat" ) )
                     <p>Same for returning error codes. Error handling is one thing.</p>
                 </section>
 
-                <section>
+                <section data-transition="linear">
                     <h3>Conclusion</h3>
                     <ul>
                         <li>Small!</li>
@@ -340,12 +340,27 @@ if ( set( "username", "NyanCat" ) )
                 </section>
 
                 <section data-state="blackout" data-transition="linear">
-                    <h3>Links</h3>
-                    <ul>
-                        <li><a href="http://bit.ly/clean-functions">View slides bit.ly/clean-functions</a></li>
-                        <li><a href="https://github.com/JeroenDeDauw/slides/">Slides source on GitHub</a></li>
-                    </ul>
-                    <img src="img/cat.gif" />
+                    <h3>These slides</h3>
+                    <p>CC BY-SA 3.0, <a href="https://twitter.com/#!/JeroenDeDauw">Jeroen De Dauw</a></p>
+                    <p>
+                        <a href="https://github.com/JeroenDeDauw/slides/">Clone from GitHub</a>
+                        or view at <a href="http://bit.ly/clean-functions">bit.ly/clean-functions</a>
+                    </p>
+
+                    <div class="fragment">
+                        <br />
+                        <h3>Attribution</h3>
+                        <p>Slide engine: <a href="http://lab.hakim.se/reveal-js/">reveal.js</a>, Copyright (C) 2013 Hakim El Hattab</p>
+                        <small>
+                            <br />
+                            A lot of the material in these slides is based on works by Robert C. Martin.<br />
+                            In particular his book
+                            <a href="http://www.goodreads.com/book/show/3735293-clean-code">Clean Code</a>
+                            , and
+                            <a href="http://www.cleancoders.com/">Clean Coders</a>
+                            video series.
+                        </small>
+                    </div>
                 </section>
 
                 <section data-state="blackout" data-transition="linear">
@@ -357,25 +372,8 @@ if ( set( "username", "NyanCat" ) )
                     <img height="290px" src="img/legacy-code.jpg" />
                 </section>
 
-                <section data-state="blackout" data-transition="linear">
-                    <img src="img/i-has-question-lolcat.jpg" />
-                </section>
-
                 <section data-state="blackout">
-                    <h3>Attribution</h3>
-                    <ul>
-                        <li>Slides: CC BY-SA 3.0, <a href="https://twitter.com/#!/JeroenDeDauw">Jeroen De Dauw</a></li>
-                        <li>Slide engine: <a href="http://lab.hakim.se/reveal-js/">reveal.js</a>, Copyright (C) 2013 Hakim El Hattab</li>
-                    </ul>
-                    <small>
-                        <br />
-                        A lot of the material in these slides is based on works by Robert C. Martin.<br />
-                        In particular his book
-                        <a href="http://www.goodreads.com/book/show/3735293-clean-code">Clean Code</a>
-                        , and
-                        <a href="http://www.cleancoders.com/">Clean Coders</a>
-                        video series.
-                    </small>
+                    <img src="img/i-has-question-lolcat.jpg" />
                 </section>
 
 			</div>
