--- a/smwcon/2013fall/yearly/index.html
+++ b/smwcon/2013fall/yearly/index.html
@@ -40,7 +40,7 @@
                 <h2>Yearly LolCats overview</h2>
                 <p>
                     Caturday will not be stopped!<br />
-                    <img src="img/cat.gif" alt="Y U NO LOAD">
+                    <img src="img/Willnotbestopped.gif" alt="Y U NO LOAD"><br /><br />
                 </p>
             </section>
 
@@ -388,11 +388,9 @@
 
             <section data-background="#4d7e65" data-transition="linear" data-background-transition="slide">
                 <p>
-                    Questions?<br /><br />
+                    <img src="img/cat_question2.jpg" />
 
-                    <img src="img/Willnotbestopped.gif" alt="Y U NO LOAD"><br /><br />
-
-                    bit.ly/2013-smw<br /><br />
+                    <br /><br />bit.ly/2013-smw<br /><br />
 
                     Your ideas and support are welcome!
                 </p>
@@ -402,7 +400,7 @@
                 <h3>Special:Links</h3>
                 <ul>
                     <li><a href="http://bit.ly/smw-2013">View slides bit.ly/smw-2013</a></li>
-                    <li><a href="https://github.com/JeroenDeDauw/slides/">Slides on GitHub (source)</a></li>
+                    <li><a href="https://github.com/JeroenDeDauw/slides/">Slides on GitHub</a> (CC BY-SA 3.0 licensed)</li>
                     <li><a href="https://semantic-mediawiki.org">semantic-mediawiki.org</a></li>
                     <li><a href="https://twitter.com/#!/SemanticMW">@SemanticMW on Twitter</a></li>
                 </ul>
