Update dev slides

--- a/smwcon/2013fall/dev/index.html
+++ b/smwcon/2013fall/dev/index.html
@@ -36,41 +36,51 @@
 
 			<!-- Any section element inside of this container is displayed as a slide -->
 			<div class="slides">
-            <section>
-                <section data-transition="default">
-                    <h2></h2>
-                    <p>
-                        Tutorial by <a href="https://twitter.com/JeroenDeDauw">@JeroenDeDauw</a><br /><br />
-                        bit.ly/smw-2013-dev<br /><br />
-                        <a href="https://semantic-mediawiki.org/wiki/SMWCon_Fall_2013/Hands-on_session._Programming_SMW">SMWCon Fall 2013, Berlin</a>
-                    </p>
+                <section>
+                    <section data-transition="default">
+                        <h2></h2>
+                        <p>
+                            Tutorial by <a href="https://twitter.com/JeroenDeDauw">@JeroenDeDauw</a><br /><br />
+                            bit.ly/smw-2013-dev<br /><br />
+                            <a href="https://semantic-mediawiki.org/wiki/SMWCon_Fall_2013/Hands-on_session._Programming_SMW">SMWCon Fall 2013, Berlin</a>
+                        </p>
+                    </section>
+
+                    <section data-transition="default">
+                        <img src="img/refactoring.gif" />
+                    </section>
                 </section>
 
-                <section data-transition="default">
-                    <img src="img/refactoring.gif" />
+
+                <section data-state="blackout" data-transition="linear">
+                    <h3>Special:Links</h3>
+                    <p><a href="http://bit.ly/smw-2013-dev">View slides at bit.ly/smw-2013-dev</a></p>
+                    <p><a href="https://github.com/JeroenDeDauw/slides/">Slides on GitHub (source)</a></p>
+                    <p><a href="https://semantic-mediawiki.org">semantic-mediawiki.org</a></p>
+                    <p><a href="https://twitter.com/#!/SemanticMW">@SemanticMW on Twitter</a></p>
                 </section>
-            </section>
 
+                <section data-state="blackout">
+                    <img src="img/i-has-question-lolcat.jpg" />
+                </section>
 
-            <section data-state="blackout" data-transition="linear">
-                <h3>Special:Links</h3>
-                <p><a href="http://bit.ly/smw-2013-dev">View slides at bit.ly/smw-2013-dev</a></p>
-                <p><a href="https://github.com/JeroenDeDauw/slides/">Slides on GitHub (source)</a></p>
-                <p><a href="https://semantic-mediawiki.org">semantic-mediawiki.org</a></p>
-                <p><a href="https://twitter.com/#!/SemanticMW">@SemanticMW on Twitter</a></p>
-            </section>
+                <section>
+                    <h3>Overview</h3>
+                    <ul>
+                        <li>Step 0: extension foundation</li>
+                        <li class="fragment">Step 0 -> 1: registering a result format</li>
+                        <li class="fragment">Step 1 -> 2: implementing the format</li>
+                        <li class="fragment">Step 2 -> 3: supporting parameters</li>
+                    </ul>
+                </section>
 
-            <section data-state="blackout">
-                <img src="img/i-has-question-lolcat.jpg" />
-            </section>
-
-            <section data-state="blackout">
-                <h3>Special:Attribution</h3>
-                <ul>
-                    <li>Slides: CC BY-SA 3.0, <a href="https://twitter.com/#!/JeroenDeDauw">Jeroen De Dauw</a></li>
-                    <li>Slide engine: <a href="http://lab.hakim.se/reveal-js/">reveal.js</a>, Copyright (C) 2013 Hakim El Hattab</li>
-                </ul>
-            </section>
+                <section data-state="blackout">
+                    <h3>Special:Attribution</h3>
+                    <ul>
+                        <li>Slides: CC BY-SA 3.0, <a href="https://twitter.com/#!/JeroenDeDauw">Jeroen De Dauw</a></li>
+                        <li>Slide engine: <a href="http://lab.hakim.se/reveal-js/">reveal.js</a>, Copyright (C) 2013 Hakim El Hattab</li>
+                    </ul>
+                </section>
 
 			</div>
 
