Add to dev slides

--- a/smwcon/2013fall/dev/index.html
+++ b/smwcon/2013fall/dev/index.html
@@ -51,19 +51,6 @@
                     </section>
                 </section>
 
-
-                <section data-state="blackout" data-transition="linear">
-                    <h3>Special:Links</h3>
-                    <p><a href="http://bit.ly/smw-2013-dev">View slides at bit.ly/smw-2013-dev</a></p>
-                    <p><a href="https://github.com/JeroenDeDauw/slides/">Slides on GitHub (source)</a></p>
-                    <p><a href="https://semantic-mediawiki.org">semantic-mediawiki.org</a></p>
-                    <p><a href="https://twitter.com/#!/SemanticMW">@SemanticMW on Twitter</a></p>
-                </section>
-
-                <section data-state="blackout">
-                    <img src="img/i-has-question-lolcat.jpg" />
-                </section>
-
                 <section>
                     <h3>Overview</h3>
                     <ul>
@@ -72,6 +59,15 @@
                         <li class="fragment">Step 1 -> 2: implementing the format</li>
                         <li class="fragment">Step 2 -> 3: supporting parameters</li>
                     </ul>
+                    <p class="fragment"><br /><a href="https://github.com/JeroenDeDauw/CheckedTable">github.com/JeroenDeDauw/CheckedTable</a></p>
+                </section>
+
+                <section data-state="blackout" data-transition="linear">
+                    <h3>Special:Links</h3>
+                    <p><a href="http://bit.ly/smw-2013-dev">View slides at bit.ly/smw-2013-dev</a></p>
+                    <p><a href="https://github.com/JeroenDeDauw/slides/">Slides on GitHub (source)</a></p>
+                    <p><a href="https://semantic-mediawiki.org">semantic-mediawiki.org</a></p>
+                    <p><a href="https://twitter.com/#!/SemanticMW">@SemanticMW on Twitter</a></p>
                 </section>
 
                 <section data-state="blackout">
