--- a/smwcon/2013fall/arch/index.html
+++ b/smwcon/2013fall/arch/index.html
@@ -47,7 +47,7 @@
                 </section>
 
                 <section data-transition="default">
-                    <img src="img/refactoring.gif" />
+                    <img src="img/be-smart-about-it.gif" />
                 </section>
             </section>
 
@@ -205,6 +205,10 @@ string SMWQueryProcessor::getResultFromQuery(SMWQuery $query, array $params)
                         <li class="fragment">Result printer output added to page</li>
                     </ul>
                 </section>
+
+            <section>
+                <img src="img/no-powerpoint.jpg" width="600px" />
+            </section>
 
             <section data-background="#004040">
                 <h3>Presentation layer</h3>
