--- a/smwcon/2013fall/dev/index.html
+++ b/smwcon/2013fall/dev/index.html
@@ -62,6 +62,17 @@
                     <p class="fragment"><br /><a href="https://github.com/JeroenDeDauw/CheckedTable">github.com/JeroenDeDauw/CheckedTable</a></p>
                 </section>
 
+                <section>
+                    <h3>Steps for you</h3>
+                    <ul>
+                        <li>Clone github.com/JeroenDeDauw/CheckedTable</li>
+                        <li>Enable it as MediaWiki extension, AFTER SMW</li>
+                        <li>Both SMW and SemanticForms need to be enabled as well</li>
+                        <li>Import the xml files located in /demo</li>
+                    </ul>
+                    <p class="fragment"><br /><a href="https://github.com/JeroenDeDauw/CheckedTable">github.com/JeroenDeDauw/CheckedTable</a></p>
+                </section>
+
                 <section data-state="blackout" data-transition="linear">
                     <h3>Special:Links</h3>
                     <p><a href="http://bit.ly/smw-2013-dev">View slides at bit.ly/smw-2013-dev</a></p>
@@ -96,8 +107,7 @@
 				center: true,
 
 				theme: Reveal.getQueryHash().theme, // available themes are in /css/theme
-				transition: Reveal.getQueryHash().transition || 'linear', // default/cube/page/concave/zoom/linear/fade/none
-                backgroundTransition: 'slide',
+				transition: Reveal.getQueryHash().transition || 'default', // default/cube/page/concave/zoom/linear/fade/none
 
 				// Optional libraries used to extend on reveal.js
 				dependencies: [
