--- a/smwcon/2013fall/yearly/index.html
+++ b/smwcon/2013fall/yearly/index.html
@@ -298,25 +298,26 @@
             </section>
 
             <section>
-                <h3>#set_recurring_event now creates subobjects</h3>
                 <p>
-
+                    #set_recurring_event now creates subobjects
                 </p>
             </section>
 
             <section>
-                <h3>ApiInfo (api.php?action=smwinfo)</h3>
+                <h3>ApiInfo</h3>
+                <p>api.php?action=smwinfo</p>
+                <p>Additional information can now be retrieved</p>
                 <p>
-                    Extension of available information
                     <img src="img/smw-19-api-smwinfo-xml.png" alt="ApiInfo">
                     <img src="img/smw-19-api-smwinfo-json.png" alt="ApiInfo">
                 </p>
             </section>
 
             <section>
-                <h3>SMW\Api\BrowseBySubject (api.php?action=browsebysubject)</h3>
+                <h3>SMW\Api\BrowseBySubject</h3>
+                <p>api.php?action=browsebysubject</p>
                 <p>
-                    Access semantic data of a subject via the Api
+                    Access semantic data of a subject via the API
                     <img src="img/smw-19-api-browse.png" alt="BrowseBySubject">
                 </p>
             </section>
