Tweaks to yearly

--- a/smwcon/2013fall/yearly/index.html
+++ b/smwcon/2013fall/yearly/index.html
@@ -62,7 +62,7 @@
                     <li class="fragment">Domain layer guy</li>
                     <li class="fragment">Software craftsmanship</li>
                     <li class="fragment">Passion for interoperability and reuse</li>
-                    <li class="fragment"><span style="color:#aaaaaa">Lolcats!</span></li>
+                    <li class="fragment">Lolcats!</li>
                 </ul>
             </section>
 
@@ -149,13 +149,6 @@
             </section>
 
             <section>
-                <p>
-                    Status badges
-
-                </p>
-            </section>
-
-            <section>
                 <section>
                     <p>
                         Composer support!
@@ -210,25 +203,25 @@
 
                 <section>
                     <p>The total number of queries</p>
-<pre>{{#ask:
+<pre class="fragment">{{#ask:
 <span style="color:lightgreen">[[Query size::+]]</span>
 |format=count
 }}</pre>
 
-                    <p>Number of pages with queries</p>
-<pre>{{#ask:
+                    <p class="fragment">Number of pages with queries</p>
+<pre class="fragment">{{#ask:
 <span style="color:lightgreen">[[Has query::+]]</span>
 |format=count
 }}</pre>
 
-                    <p># queries with format=count</p>
-<pre>{{#ask:
+                    <p class="fragment"># queries with format=count</p>
+<pre class="fragment">{{#ask:
 <span style="color:lightgreen">[[Query format::count]]</span>
 |format=count
 }}</pre>
 
-                    <p># pages with a query with size > 10</p>
-<pre>{{#ask:
+                    <p class="fragment"># pages with a query with size > 10</p>
+<pre class="fragment">{{#ask:
 <span style="color:lightgreen">[[Has query.Query size::>10]]</span>
 |format=count
 }}</pre>
@@ -306,7 +299,6 @@
             <section>
                 <h3>ApiInfo</h3>
                 <p>api.php?action=smwinfo</p>
-                <p>Additional information can now be retrieved</p>
                 <p>
                     <img src="img/smw-19-api-smwinfo-xml.png" alt="ApiInfo">
                     <img src="img/smw-19-api-smwinfo-json.png" alt="ApiInfo">
@@ -316,10 +308,7 @@
             <section>
                 <h3>SMW\Api\BrowseBySubject</h3>
                 <p>api.php?action=browsebysubject</p>
-                <p>
-                    Access semantic data of a subject via the API
-                    <img src="img/smw-19-api-browse.png" alt="BrowseBySubject">
-                </p>
+                <img src="img/smw-19-api-browse.png" alt="BrowseBySubject">
             </section>
 
             <section>
@@ -334,7 +323,7 @@
             <section data-transition="linear">
                 <h3>When?</h3>
                 <p>
-                    Q4 2013?
+                    December 2013?
                 </p>
             </section>
 
