--- a/craftmanship/static/index.html
+++ b/craftmanship/static/index.html
@@ -36,7 +36,48 @@
 
 			<!-- Any section element inside of this container is displayed as a slide -->
 			<div class="slides">
+                <section>
+                    <h2>Static: The S in STUPID</h2>
+                    <p>
+                        Presentation by <a href="https://twitter.com/JeroenDeDauw">@JeroenDeDauw</a><br /><br />
+                        bit.ly/
+                    </p>
+                </section>
 
+                <section data-transition="linear">
+                    <h3>Conclusion</h3>
+                    <ul>
+                        <li>TODO</li>
+                    </ul>
+                </section>
+
+                <section data-state="blackout" data-transition="linear">
+                    <h3>These slides</h3>
+                    <p>CC BY-SA 3.0, <a href="https://twitter.com/#!/JeroenDeDauw">Jeroen De Dauw</a></p>
+                    <p>
+                        <a href="https://github.com/JeroenDeDauw/slides/">Clone from GitHub</a>
+                        or view at <a href="http://bit.ly/clean-functions">bit.ly/</a>
+                    </p>
+
+                    <div class="fragment">
+                        <br />
+                        <h3>Attribution</h3>
+                        <p>Slide engine: <a href="http://lab.hakim.se/reveal-js/">reveal.js</a>, Copyright (C) 2013 Hakim El Hattab</p>
+                    </div>
+                </section>
+
+                <section data-state="blackout" data-transition="linear">
+                    <h3>Instead of me</h3>
+
+                    <img height="290px" src="img/clean-code.jpg" />
+                    <img height="290px" src="img/clean-coder.jpg" />
+                    <img height="290px" src="img/legacy-code.jpg" />
+                    <img height="290px" src="img/fowler-enterprise.jpg" />
+                </section>
+
+                <section data-state="blackout">
+                    <img src="img/i-has-question-lolcat.jpg" />
+                </section>
 			</div>
 
 		</div>
