--- a/craftmanship/static/index.html
+++ b/craftmanship/static/index.html
@@ -40,7 +40,7 @@
                     <h2>Static: The S in STUPID</h2>
                     <p>
                         Presentation by <a href="https://twitter.com/JeroenDeDauw">@JeroenDeDauw</a><br /><br />
-                        bit.ly/
+                        bit.ly/static-code
                     </p>
                 </section>
 
@@ -56,7 +56,7 @@
                     <p>CC BY-SA 3.0, <a href="https://twitter.com/#!/JeroenDeDauw">Jeroen De Dauw</a></p>
                     <p>
                         <a href="https://github.com/JeroenDeDauw/slides/">Clone from GitHub</a>
-                        or view at <a href="http://bit.ly/clean-functions">bit.ly/</a>
+                        or view at <a href="http://bit.ly/static-code">bit.ly/static-code</a>
                     </p>
 
                     <div class="fragment">
