--- a/craftmanship/static/index.html
+++ b/craftmanship/static/index.html
@@ -174,6 +174,11 @@ class Logger {
                     <img src="img/omg-cat.gif" class="fragment" />
                 </section>
 
+                <section data-transition="linear">
+                    <p>Using an instance</p>
+
+                </section>
+
                 <section data-state="blackout" data-transition="linear">
                     <h3>These slides</h3>
                     <p>CC BY-SA 3.0, <a href="https://twitter.com/#!/JeroenDeDauw">Jeroen De Dauw</a></p>
